# webgpu

./: .gitignore  CMakeLists.txt  main.cpp  utility.cpp  utility.h
webgpu_impl/: CMakeLists.txt
